@@ -252,13 +252,13 @@ class TestValidateDocumentPaths(cmptest.TestCase):
         date = datetime.date(2014, 3, 3)
         meta = data.new_metadata('<validation_test>', 0)
         entries = [data.Document(meta, date, 'Assets:Account1',
-                                 "/abs/path/to/something.pdf"),
+                                 "/abs/path/to/something.pdf", None, None),
                    data.Document(meta, date, 'Assets:Account2',
-                                 "relative/something.pdf"),
+                                 "relative/something.pdf", None, None),
                    data.Document(meta, date, 'Assets:Account2',
-                                 "../something.pdf"),
+                                 "../something.pdf", None, None),
                    data.Document(meta, date, 'Assets:Account2',
-                                 "")]
+                                 "", None, None)]
         errors = validation.validate_documents_paths(entries, {})
         self.assertEqual(3, len(errors))
         self.assertEqual({'Assets:Account2'}, set(error.entry.account for error in errors))
