@@ -13,9 +13,12 @@ Note: This file contains only changes in the 'default' branch.
     cannot place tags or links before or in-between strings anymore. This is a
     reasonable restriction and I doubt anybody did anyway.
 
+  - Added support for tags and links to the Document directive. This works just
+    as for Transactions, e.g.
 
+      2016-10-23 document Assets:Checking "/statements/oct.pdf" #banking ^9fed846348c2
 
-
+    The current tags on the tag stack are also included, like for transactions.
 
 
 2016-10-10
